# VulkanEngine

./: .clang-format  .gitignore  .gitmodules  BuildScript.sh  CMakeLists.txt  CMakePresets.json  README.md
Demos/CISDIModel_Generator/: CISDIModel_BatchGenerator.cpp  CISDIModel_BatchGenerator.h  CISDIModel_Generator.cpp  CMakeLists.txt
Demos/DGCTest/: CMakeLists.txt  DGCTest.cpp  DGCTest.h
Demos/DynamicLoading/: CMakeLists.txt  DynamicLoading.cpp  DynamicLoading.h
Demos/MeshShader/: CMakeLists.txt  MeshShaderDemo.cpp  MeshShaderDemo.h  MeshShaderDemo.hpp
Source/CUDA/: CMakeLists.txt  CUDAHelper.h  CUDAStream.cpp  CUDAStream.h  CUDASurface.cu  CUDASurface.h  CUDAVulkan.cu  CUDAVulkan.h  VulkanCUDAInterop.cu  VulkanCUDAInterop.h  simpleCUDA.cu  simpleCUDA.h
Source/Core/: CMakeLists.txt  DbgMemLeak.h  Engine.cpp  Engine.hpp  Mesh.hpp  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanCommandManager.cpp  VulkanCommandManager.hpp  VulkanCommands.cpp  VulkanCommands.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanDebugUtils.cpp  VulkanDebugUtils.hpp  VulkanDescriptors.cpp  VulkanDescriptors.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanFrameObjects.cpp  VulkanFrameObjects.hpp  VulkanHelper.hpp  VulkanImage.cpp  VulkanImage.hpp  VulkanInstance.cpp  VulkanInstance.hpp  VulkanMemoryAllocator.cpp  VulkanMemoryAllocator.hpp  VulkanPhysicalDevice.cpp  VulkanPhysicalDevice.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanSampler.cpp  VulkanSampler.hpp  VulkanShader.cpp  VulkanShader.hpp  VulkanSurface.cpp  VulkanSurface.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp  (+4 more)
Source/Core/Application/: Application.cpp  Application.h  Application.hpp  EntryPoint.cpp  EntryPoint.h
Source/Core/CISDIModel/: Assimp_Importer.cpp  Assimp_Importer.h  CISDI_3DModelData.cpp  CISDI_3DModelData.h  CMakeLists.txt  Common.h  FBX_Importer.cpp  FBX_Importer.h  _DllDef_.h
Source/Core/CISDIModel/Source/: CISDI_3DModelData.cpp
Source/Core/CISDIModel/Source/Common/: BaseTypes.h  CodeGenDef.h  Common.h  FileIO.cpp  FileIO.h  Math.h  MeshletType.h  PMR_Def.h
Source/Core/CISDIModel/Source/Importer/: Assimp_Importer.cpp  Assimp_Importer.h  (+4 more)
Source/Core/Model/: CISDI_3DModelConverter.cpp  CISDI_3DModelConverter.hpp  CISDI_3DModelData.cpp  CISDI_3DModelData.h  CISDI_3DModelData.hpp  GPUGeometryData.cpp  GPUGeometryData.h  GPUGeometryDataManager.cpp  GPUGeometryDataManager.h  Geometry.cpp  Geometry.h  Geometry.hpp  Mesh.cpp  Mesh.h  Mesh.hpp  MeshType.hpp  Model.cpp  Model.hpp  ModelDataManager.cpp  ModelDataManager.h
Source/Core/Platform/: Input.cpp  Input.h  Window.cpp  Window.h  Window.hpp
Source/Core/SceneGraph/: Node.cpp  Node.h  NodeProxy.hpp  Scene.cpp  Scene.h
Source/Core/Utilities/: Camera.cpp  Camera.h  Camera.hpp  Defines.h  Defines.hpp  Functor.hpp  GUI.cpp  GUI.h  Logger.h  Logger.hpp  MemoryPool.h  MemoryPool.hpp  Profiler.cpp  Profiler.h  Timer.cpp  Timer.h  Timer.hpp  VulkanUtilities.cpp  VulkanUtilities.h  VulkanUtilities.hpp
Source/Core/Utilities/Threading/: Thread.hpp
Source/Core/Vulkan/: Buffer.cpp  Buffer.hpp  CommandManager.cpp  CommandManager.hpp  Commands.cpp  Commands.hpp  Context.cpp  Context.hpp  DebugUtils.cpp  Descriptors.cpp  Descriptors.hpp  Device.cpp  Device.hpp  EngineCore.cpp  EngineCore.hpp  Instance.cpp  Instance.hpp  MemoryAllocator.cpp  PhysicalDevice.cpp  PhysicalDevice.hpp  Pipeline.cpp  Pipeline.hpp  RenderResource.cpp  RenderResource.h  RenderResource.hpp  RenderResourceManager.cpp  RenderResourceManager.hpp  Sampler.cpp  Sampler.hpp  Shader.cpp  Shader.hpp  Surface.cpp  Swapchain.cpp  Swapchain.hpp  SyncStructures.cpp  SyncStructures.hpp  Texture.cpp  Texture.hpp  VulkanHelper.hpp
Source/Core/Vulkan/Manager/: CommandManager.cpp  CommandManager.h  Context.cpp  Context.h  Context.hpp  DGCSeqManager.cpp  DGCSeqManager.h  DGCSequenceManager.cpp  DGCSequenceManager.h  DescriptorManager.cpp  DescriptorManager.hpp  DrawCallManager.cpp  DrawCallManager.h  PipelineManager.cpp  PipelineManager.h  PipelineManager.hpp  RenderFrame.cpp  RenderFrame.h  RenderResourceManager.cpp  RenderResourceManager.h  RenderResourceManager.hpp  ShaderManager.cpp  ShaderManager.h  ShaderManager.hpp  ShaderModuleManager.cpp  ShaderModuleManager.hpp  VulkanContext.cpp  VulkanContext.h
Source/Core/Vulkan/Native/: Buffer.cpp  Buffer.h  Buffer.hpp  CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  Commands.cpp  Commands.h  DGCSeqDataBufPoolResource.cpp  DGCSeqDataBufPoolResource.h  DGCSeqLayout.cpp  DGCSeqLayout.h  DGCSeqRenderLayout.cpp  DGCSeqRenderLayout.h  DGCSequence.cpp  DGCSequence.h  DGCSequenceLayout.cpp  DGCSequenceLayout.h  DebugUtils.cpp  DebugUtils.h  DebugUtils.hpp  DescriptorSetAllocator.cpp  DescriptorSetAllocator.h  DescriptorSetAllocator.hpp  Descriptors.cpp  Descriptors.h  Descriptors.hpp  Device.cpp  Device.h  Device.hpp  DrawCallMetaData.cpp  DrawCallMetaData.h  FencePool.cpp  FencePool.h  Image.cpp  Image.h  Instance.cpp  Instance.h  MemoryAllocator.cpp  (+36 more)
Source/Core/Vulkan/RenderGraph/: ArgumentTypes.h  RenderGraph.cpp  RenderGraph.h  RenderPassBindingInfo.cpp  RenderPassBindingInfo.h  RenderSequence.cpp  RenderSequence.h  RenderSequenceConfig.cpp  RenderSequenceConfig.h
Source/Core/Vulkan/RenderPass/: RenderPassBindingInfo.cpp  RenderPassBindingInfo.h  RenderPassBindingInfo.hpp
Source/Core/VulkanCore/: VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanCommandManager.cpp  VulkanCommandManager.hpp  VulkanCommands.cpp  VulkanCommands.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanDebugUtils.cpp  VulkanDescriptors.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanEngine.cpp  VulkanEngine.hpp  VulkanFrameObjects.hpp  VulkanImage.cpp  VulkanImage.hpp  VulkanInstance.cpp  VulkanInstance.hpp  VulkanMemoryAllocator.cpp  VulkanPhysicalDevice.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanRenderResource.cpp  VulkanRenderResource.h  VulkanResource.cpp  VulkanResource.h  VulkanSampler.hpp  VulkanSurface.cpp  VulkanSurface.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp  VulkanSyncStructures.cpp  VulkanSyncStructures.hpp  VulkanTexture.cpp  VulkanTexture.hpp
(+21 files in other folders)
